# UBB-FMI-Informatica

./: README.md
ANUL 1/ALGORITMICA GRAFELOR/arbore_minim_de_acoperire/: main.cpp
ANUL 1/ALGORITMICA GRAFELOR/codare_huffman/: main.cpp
ANUL 1/ALGORITMICA GRAFELOR/codare_prufer/: main.cpp
ANUL 1/ALGORITMICA GRAFELOR/decodare_huffman/: main.cpp
ANUL 1/ALGORITMICA GRAFELOR/decodare_prufer/: main.cpp
ANUL 1/ALGORITMICA GRAFELOR/grafuri_laborator1/: main.cpp
ANUL 1/ALGORITMICA GRAFELOR/lab3/: main.cpp
ANUL 1/ALGORITMICA GRAFELOR/lab3_pb2/: main.cpp
ANUL 1/ALGORITMICA GRAFELOR/parcurgeri/: main.cpp
ANUL 1/ALGORITMICA GRAFELOR/transformari/: main.cpp
ANUL 1/FUNDAMENTELE PROGRAMARII/OperatiiCuNumereInDiverseBaze/: tema_electronica_kentsc_karina_part1.docx  tema_electronica_kentsch_karina_part2.docx
ANUL 1/PROGRAMARE ORIENTATA OBIECT/BIBLIOTECA/: CMakeLists.txt  main.cpp
ANUL 1/PROGRAMARE ORIENTATA OBIECT/BIBLIOTECA/Cos_de_inchirieri/: CosCarti.cpp  CosCarti.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/BIBLIOTECA/Observer/: Observable.h  Observer.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/BIBLIOTECA/QT_UI/: CosCrudGUI.cpp  CosCrudGUI.h  CosReadOnlyGUI.cpp  CosReadOnlyGUI.h  MyTableModel.h  QT_UI.cpp  QT_UI.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/BIBLIOTECA/Vector/: MyVector.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/BIBLIOTECA/business/: ServiceBiblioteca.cpp  ServiceBiblioteca.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/BIBLIOTECA/domain/: carte.cpp  carte.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/BIBLIOTECA/errors/: RepoError.cpp  RepoError.h  ValidationError.cpp  ValidationError.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/BIBLIOTECA/presentation/: UI.cpp  UI.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/BIBLIOTECA/repository/: BaseRepo.h  RepositoryBiblioteca.cpp  RepositoryBiblioteca.h  RepositoryBibliotecaFile.cpp  RepositoryBibliotecaFile.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/BIBLIOTECA/tests/: test.cpp  test.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/BIBLIOTECA/undo/: ActiuneUndo.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/BIBLIOTECA/validator/: Validator.cpp  Validator.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/melodii1/: CMakeLists.txt  main.cpp
ANUL 1/PROGRAMARE ORIENTATA OBIECT/melodii2/: CMakeLists.txt  main.cpp
ANUL 1/PROGRAMARE ORIENTATA OBIECT/produse/: CMakeLists.txt  main.cpp
ANUL 1/PROGRAMARE ORIENTATA OBIECT/produse/business/: ServiceProdus.cpp  ServiceProdus.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/produse/domain/: Produs.cpp  Produs.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/produse/errors/: RepoError.h  ValidationError.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/produse/presentation/: TableViewModel.h  UI.cpp  UI.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/produse/repository/: RepoProdus.cpp  RepoProdus.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/produse/tests/: Test.cpp  Test.h
ANUL 1/PROGRAMARE ORIENTATA OBIECT/produse/validation/: Validator.h
ANUL 1/STRUCTURI DE DATE SI ALGORITMI/lab 6/: Matrice.cpp  Matrice.h
ANUL 1/STRUCTURI DE DATE SI ALGORITMI/lab3/: CMakeLists.txt
ANUL 1/STRUCTURI DE DATE SI ALGORITMI/lab4/: App.cpp  CMakeLists.txt  IteratorMDO.cpp  IteratorMDO.h  MDO.cpp  MDO.h  TestExtins.cpp
ANUL 1/STRUCTURI DE DATE SI ALGORITMI/lab7/: AB.cpp  AB.h  App.cpp  CMakeLists.txt  IteratorAB.cpp  IteratorAB.h
ANUL 2/BAZE DE DATE/GestiuneaUnuiCabinetMedical/: CreareBazeDeDateCabinetMedical.sql  Interogari.sql  lab3.sql  lab4.sql  lab5.sql
ANUL 2/INGINERIA SISTEMELOR SOFT/Diagrame/: BibliotecaDiagramaCazurilorDeUtilizare.mdj  BibliotecaDiagramaDeClase.mdj  CreazaContDiagramaDeComunicare.mdj  CreazaContDiagramaDeSecventa.mdj  DeconectareDiagramaDeComunicare.mdj  DeconectareDiagramaDeSecventa.mdj  ImprumutCartiDiagDeSecventa.mdj  LoginDiagramaDeComunicare.mdj  LoginDiagramaDeSecventa.mdj  ReturnareCartiDiagrame.mdj
ANUL 2/INGINERIA SISTEMELOR SOFT/Proiect Biblioteca/: Colectarea si analiza cerintelor - Biblioteca.docx  Iteratia 2 -Biblioteca.docx  Iteratia 3 - biblioteca.docx  Iteratia1 - Biblioteca.docx
ANUL 2/INTELIGENTA ARTIFICIALA/Proiect Evolutia Gripei/: README.md  (+1 more)
ANUL 3/ISTORIA INFORMATICII/: IntrebariExamenFinal.md
ANUL 3/METODE INTELIGENTE DE REZOLVARE A PROBLEMELOR REALE/: MentalHealthDetection.ipynb  README.md
Lab11 - Generative AI/: probleme.ipynb  scop.csv
Lab11 - Generative AI/Coduri/: 10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
(+870 files in other folders)
